# pepm

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  fpm2.1  fpm2.glade  fpm2.gladep  fpm2.spec  pepm.1  pepm.glade  pepm.gladep  pepm.spec
data/: Makefile.am  Makefile.in  fpm2.desktop.in.in  pepm.desktop.in.in
data/pixmaps/: Makefile.am  Makefile.in
po/: LINGUAS  POTFILES.in  bg.po  cs.po  de.po  es.po  eu.po  fr.po  hu.po  it.po  ru.po
src/: Makefile.am  Makefile.in  bithelp.h  callbacks.c  callbacks.h  fpm.c  fpm.h  fpm_clist.c  fpm_crypt.c  fpm_file.c  fpm_file.h  fpm_gpw.c  fpm_gpw.h  fpm_launcher.c  interface.c  interface.h  main.c  support.c  support.h
